added few stuff
